# ray

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
benches/: shaders_benchmark.rs
src/: compute_context.rs  gpu_manager.rs  lib.rs  main.rs  render_context.rs  render_manager.rs  renderer.rs  shader.wgsl  tests.rs
src/objects/: material.rs  mod.rs  sphere.rs
src/shaders/: hit_record.wgsl  main.wgsl  ray.wgsl  sphere.wgsl
src/shaders/compute/: camera.wgsl  hit_record.wgsl  interval.wgsl  main.wgsl  material.wgsl  math.wgsl  random.wgsl  sphere.wgsl
src/shaders/render/: fragment.wgsl  vertex.wgsl
