[package]
name = "ray"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = { version = "1.22.0", features = ["derive"] }
env_logger = "0.11.8"
futures-intrusive = "0.5.0"
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.9"
gpu_manager = {git = "https://github.com/LeandroVandari/gpu_manager.git"}